# youtube-terminal

./: Cargo.toml  README.md
docs/plans/: 2026-03-05-youtube-terminal-design.md  2026-03-05-youtube-terminal-implementation.md
src/: app.rs  config.rs  event.rs  main.rs  models.rs  session.rs  thumbnails.rs
src/auth/: cookies.rs  mod.rs
src/db/: cache.rs  history.rs  mod.rs  saved_searches.rs  subscriptions.rs
src/player/: mod.rs  mpv.rs
src/provider/: mod.rs  rustypipe_provider.rs
src/ui/: card_grid.rs  channel_detail.rs  filter_bar.rs  mod.rs  now_playing.rs  playlist_detail.rs  popup.rs  saved_searches_list.rs  search_bar.rs  subscription_list.rs  tab_bar.rs  theme.rs  video_detail.rs  video_list.rs
