[package]
name = "youtube-terminal"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
tokio = { version = "1", features = ["full"] }
rustypipe = { version = "0.11", features = ["userdata"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
image = "0.25"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
anyhow = "1"
async-trait = "0.1"
